# Distributed-Programming-on-VMs

Ejemplos/Ejercicio0/: CMakeLists.txt  server.cpp  utils.cpp  utils.h
Ejemplos/libreria_utils_ejemplo0/Documentos/Docencia/SisDis/20_21/Ejercicio0/libreria_utils_ejemplo0/: CMakeLists.txt  client.cpp  operaciones.cpp  operaciones.h  operaciones_imp.cpp  operaciones_imp.h  operaciones_stub.cpp  operaciones_stub.h  server.cpp  utils.cpp
Practica1/fileManager/: CMakeLists.txt  client.cpp  file_func.cpp  file_func.h  filemanager.h  filemanager_imp.cpp  filemanager_imp.h  filemanager_stub.cpp  filemanager_stub.h  main_fm.cpp  server.cpp  utils.h
Practica1/multMatrix/: CMakeLists.txt  main_multMatrix.cpp  matrix_func.cpp  matrix_func.h  multMatrix_imp.cpp  multMatrix_imp.h  multMatrix_stub.cpp  multMatrix_stub.h  server.cpp  utils.h
